feat: activation keys impl
